syntax = "proto3";

option csharp_namespace = "Generated";

message ConnectResponse 
{
	int32 id = 1;
}